# Base-de-Datos

./: .replit  Database.py  README.md  Test_Delete Terminal.py  Test_Logo.py  Test_Password not public.py  Test_Progress Bar.py  base_de_datos.py  pyproject.toml
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/pip-23.3.1-py3-none-any/pip-23.3.1.dist-info/: RECORD
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/setuptools-69.0.2-py3-none-any/setuptools-69.0.2.dist-info/: RECORD
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/wheel-0.42.0-py3-none-any/wheel-0.42.0.dist-info/: RECORD
Base Crypto/: Database_Crypto.py  Test_Url.py
General Base/: base_de_datos.py
