[tool.poetry]
name = "python-template"
version = "3.11.0"
description = ""
authors = ["xavi.sanchez.costa@gmail.com"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
getch = "^1.0"
mysql-connector-python = "^8.3.0"
pyfiglet = "^1.0.2"
tqdm = "^4.66.2"
replit = "3.5.0"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"